# TELOS

./: .claude_project.md  .env.example  .gitignore  .mcp.json  .mcp.json.example  ACADEMIC_PUBLICATION_FORENSICS.md  AIGRANT_APPLICATION_DRAFT.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_EXECUTIVE_SUMMARY.md  ARCHITECTURE_RESEARCH_FORENSICS.md  AUDIT_DOCUMENTS.md  BETA_IMPLEMENTATION_PLAN.md  BETA_INTEGRATION_COMPLETE.md  BETA_TESTING_AUTOMATION_REPORT.md  BETA_TESTING_DECISION_LOG.md  BUILD_NOTES_v1.1.md  BUTTON_HOVER_EXPANSION_NOTE.md  CHANGELOG.md  CHROME_EXTENSION_REBUILT.md  CITATION.cff  CLAUDE.md  CLAUDE_CODE_GOVERNANCE.md  CLEANUP_SUMMARY.txt  CODE_OF_CONDUCT.md  CODE_REVIEW_RESEARCH_FORENSICS.md  CONTRIBUTING.md  COPYRIGHT.md  DATA_SCIENCE_VALIDATION_FORENSICS.md  DEMO_MODE_STATUS.md  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_NEXT_STEPS.md  DEVOPS_RESEARCH_FORENSICS.md  DUAL_ATTRACTOR_ARCHITECTURE.md  DUAL_PA_PRIMACY_STATE_RESEARCH_PLAN.md  EMERGENT_VENTURES_APPLICATION.md  EXTERNAL_VALIDATION_FRAMEWORK.md  FINAL_FORENSIC_AUDIT_REPORT.md  GIT_COMMIT_SESSION_SUMMARY.md  (+137 more)
.github/: CONTRIBUTING.md
.streamlit/: config.toml  secrets.toml.example
POST_OPUS_AUDIT_CODEBASE/: README.md
Privacy_PreCommit/: .gitignore  Procfile  README.md
TELOSCOPE/: BETA_MODE_DEBUGGING_SUMMARY.md  DEMO_SLIDESHOW_FIX.md  FIX_SUMMARY.md  MERGE_SUMMARY.md  TESTING_SUMMARY.md  main.py
TELOSCOPE_BETA/: .env.example  .mcp_memory_context.json  BETA_EXPERIENCE_MASTER_FLOW.md  BETA_GOVERNANCE_FIXES.md  BETA_STATUS_SUMMARY.md  COLOR_AUDIT_REPORT.md  COLOR_IMPLEMENTATION_SUMMARY.md  CONTEXT_RECALL_COMPLETE.md  Claude.project.md  DEPLOYMENT_CHECKLIST.md  FIXES_APPLIED.md  GOVERNANCE_FIX_SUMMARY.md  MANUAL_GOVERNANCE_TEST.md  MISTRAL_API_SETUP.md  README.md  README_MCP_MEMORY.md  STREAMLIT_DEPLOYMENT_GUIDE.md  Steward_PM.py  Telos_recall.sh  main.py  main.py.backup_20251117_163548  requirements-pinned.txt  requirements.txt  surgical_gold_fix.py  test_app_functionality.py  test_beta_features.py  test_beta_simple.py  test_embedding_distances.py  test_regular_flow.py  test_telos_direct.py  test_ui.py
TELOS_Extension/: DEPLOYMENT_STATUS.md  OLLAMA_CORS_SETUP.md  README.md  background.js  content.js  manifest.json  popup.html  popup.js
analysis/: governance_comparison.py  run_backtest.py
archive/: CLI_Reference.md10_2.txt  ClaudeWhitepaper10_18.txt  Corrected File Packages Ready to Deploy.txt  LICENSE  Makefile  TELOS -Claude Session Stateless 0.txt  TELOS GRANT APPLICATION 9_30_25.txt  TELOS Grant Application - Minus Budget 10_9_25.txt  TELOS Grant Application 10_13_25.txt  TELOS INTERNAL TEST 0.txt  TELOS Whitepaper - Regulatory Focus 10_8_25.txt  TELOS Whitepaper - Regulatory Focus 10_9_25.txt  TELOS Whitepaper Draft 10_11_25.txt  TELOS_BUILD_MANIFEST.md  TELOS_CLI_Tool_Extraction.cli.py10_4.txt  TELOS_Pilot0_Study_and_Data_Spec.md10_4.txt  TEST0_SUCCESS.md  align_terminology.sh.txt  gitignore.txt  intervention_controller.py_.txt  organize_files.py  pap_mixin.py_.txt  pilot0_study_and_dataspec.md_.txt  primacy_math.py_.txt  profile_extractor.py_.txt  proportional_controller.py.py  run_internal_test0_improved.py.py  run_with_dashboard.py_.txt  setup.py  streamlit_live_comparison.py_.txt  telos_purpose_validation_baseline_runners.py .txt  test_active_mitigation.py  test_counterfactual_simulator.py  test_progressive_extractor.py
config/: config.json(1).txt  config.json.txt  governance_config.json
database/: SUPABASE_SCHEMA.sql  sql_FINAL_semantic_telemetry.sql  sql_add_lifecycle_tracking.sql  sql_beta_schema.sql  sql_beta_schema_clean.sql  sql_chunk5_indexes.sql  sql_chunk8_function.sql  sql_chunk9_trigger.sql  sql_semantic_telemetry_v2.sql  supabase_add_basin_tolerance_fields.sql  supabase_migration_primacy_state.sql  supabase_validation_schema_CLEAN.sql  supabase_validation_telemetric_extension.sql
demo_mode/: TWO_LAYER_ARCHITECTURE.md  __init__.py  demo_content.py  telos_corpus_loader.py  telos_framework_demo.py
demos/: README.md  _display_toolkit.py  forensics_demo.py  healthcare_launcher.py  healthcare_live_demo.py  healthcare_scenarios.py  nearmap_live_demo.py  nearmap_live_demo_v2.py  nearmap_live_demo_v3.py  nearmap_live_demo_v3.py.bak  nearmap_property_intel.yaml  openclaw_launcher.py  openclaw_live_demo.py  openclaw_scenarios.py  teloscope_demo.py
dev_dashboard/: main.py
docs/: ADJACENT_RESEARCH_LANDSCAPE.md  AGENTIC_AI_DEFENSE_LANDSCAPE_PAPER.md  AGENTIC_AI_RESEARCH_ROADMAP.docx  AGENTIC_AI_RESEARCH_ROADMAP.md  BENCHMARK_SCOPE_PropensityBench_AgentHarm.md  BERKELEY_CLTC_MAPPING.md  BETA_FEEDBACK_SURVEY.md  BETA_RECRUITMENT_EMAIL.md  BETA_TESTING_GUIDE.md  CLI_REFERENCE.md  COMPENDIUM_FINAL_REVIEW.md  COMPETITIVE_POSITIONING_ANALYSIS.md  COMPREHENSIVE_STRATEGIC_ROADMAP.md  CONFIG_REFERENCE.md  Cost_of_Ungoverned_AI_Slide_Updates.md  DEPLOYMENT_ROADMAP.md  DESIGN_SYSTEM.md  DESIGN_SYSTEM_INDEX.md  DESIGN_SYSTEM_QUICK_REFERENCE.md  DUAL_DROP_STRATEGY.md  DUAL_PA_VALIDATION_SUMMARY.md  Developer_Deployment_Checklist.md  EU_COMMISSION_CONSULTATION_REQUEST.md  EXECUTIVE_SUMMARY.md  GCP_MAPPING_ANALYSIS.md  HARDWARE_REQUIREMENTS.md  INTEGRATE_PRIMACY_STATE_SECTION.md  INTEGRATION_GUIDE.md  MIGRATION_LOG_20251125_193941.md  NSF_SBIR_PROJECT_PITCH_DRAFT.md  NSF_SBIR_VALIDATION_EVIDENCE.md  PERSISTENT_PRIMACY_ATTRACTOR.md  PRD.md  PRIMACY_STATE_RESEARCH_GROUNDING.md  README.md  REPOSITORY_SEPARATION_STRATEGY.md  REPO_MIGRATION_PLAN.md  REPRODUCTION_GUIDE.md  ROLLBACK_GUIDE.md  SETUP_GUIDE.md  (+62 more)
dual_pa_research_briefs/: research_brief_04_sharegpt_filtered_12.md  research_brief_07_sharegpt_filtered_18.md  research_brief_13_sharegpt_filtered_23.md  research_brief_14_sharegpt_filtered_24.md  research_brief_15_sharegpt_filtered_25.md  research_brief_16_sharegpt_filtered_26.md  research_brief_17_sharegpt_filtered_27.md  research_brief_20_sharegpt_filtered_3.md  research_brief_21_sharegpt_filtered_30.md  research_brief_22_sharegpt_filtered_32.md  research_brief_24_sharegpt_filtered_34.md  research_brief_25_sharegpt_filtered_35.md  research_brief_26_sharegpt_filtered_36.md  (+9 more)
(+1880 files in other folders)
